<resources>
    <string name="app_name">NairaRefill</string>
    <string name="search_icon">search icon</string>
    <string name="_13_aremu_street_ikeja_lagos">13, Aremu Street, Ikeja, Lagos</string>
    <string name="oshodi_market">e.g Oshodi Market</string>
    <string name="years_of_business_experience">Years of business experience</string>
    <string name="market_area">Market Area</string>
    <string name="office_location">Office Location</string>
    <string name="_15_years">15 years</string>
    <string name="full_name">Full Name</string>
    <string name="oluwasegun_aremu">Oluwasegun Aremu</string>
    <string name="business_name">Business Name</string>
    <string name="akent_furnitures">AKent Furnitures</string>
    <string name="description_of_what_you_do_30_words">Description of what you do (30 words)</string>
    <string name="we_are_into">We are into...</string>
    <string name="other_phone_address">Alternative Phone Number</string>
    <string name="_2348187448888">Telephone Number (Do not add country code)</string>
    <string name="account_number">Account Number</string>
    <string name="ads_reg_form">Profile Update</string>
    <string name="upload_logo">Upload Profile Picture</string>
    <string name="select">Select</string>
    <string name="register">Register</string>
    <string name="how_do_you_provide_your_services">How do you provide your services</string>
    <string name="we_are_into_vehicle_rewiring_balancing_and_alignment">e.g \nWe are into vehicle rewiring, \nbalancing and alignment...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more</string>
    <string name="sample">I am an experienced Full stack developer with 8+ years of experience. My skill set includes Wordpress, Drupal, Woocommerce Laravel, Codeigniter, Ajax, Jquery, PHP, HTML, CSS, JavaScript and MYSQL. Please come to chat to discuss more. Regards Shahid j</string>
    <string name="describe_what_you_need_to_do_for_this_client">Describe what you need to do for this client</string>
    <string name="enter_your_description_here">Enter your description here</string>
    <string name="additional_benefit_you_can_offer">Additional benefit you can offer</string>
    <string name="enter_your_benefit_here">Enter your benefit here</string>
    <string name="place_bid">Place Bid</string>
    <string name="place_bid_on_this_project">Place Bid On This Service/Sale</string>
    <string name="project_details">Project Details</string>
    <string name="delete">Delete</string>
    <string name="promotional_offers">Promotional Offers</string>
    <string name="title_of_service">Title of Service</string>
    <string name="hint_title">Furniture</string>
    <string name="pick_a_category">Pick A Category</string>
    <string name="description_of_service_you_render">Description of Service You Render</string>
    <string name="hint_description">I make furniture for schools, homes etc.</string>
    <string name="average_price">Price Range</string>
    <string name="hint_price">6000</string>
    <string name="optional">(optional)</string>
    <string name="product_service_image">Product/Service Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="ads">Ads</string>
    <string name="finds">Finds</string>
    <string name="chat">Chat</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="i_need_a_furniture_maker">I need a furniture maker</string>
    <string name="select_category">Select category</string>
    <string name="budget">Budget</string>
    <string name="describe_the_service_you_are_searching_for">Describe the service/product</string>
    <string name="i_am_searching_for_a_good_furniture_maker">I am searching for a good furniture maker...</string>
    <string name="promotional_offers_are_you_interested_in">Promotional offers</string>
    <string name="home">Home</string>
    <string name="message">Messenger</string>
    <string name="post_ad">Post Ad</string>
    <string name="profile">Profile</string>
    <string name="popular_communities">Popular communities</string>
    <string name="view_all">View all</string>
    <string name="search_find_and_ad">Search find and ad</string>
    <string name="you">You</string>
    <string name="chats">Chats</string>
    <string name="description">Description</string>
    <string name="promotions">Promotions</string>
    <string name="leave_a_feedback">Leave a feedback</string>
    <string name="what_we_do">What we do</string>
    <string name="phone_verification_info">Enter the 6 digit code sent to you</string>
    <string name="browse">Browse</string>
    <string name="members">Members</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="share_your_experience">Share your thought</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="neutral">Neutral</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="detailed_feedback">Detailed Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="proposals">Bids</string>
    <string name="detail">Detail</string>
    <string name="post_find">Add Find</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_will_send_you_a_one_time_sms_message">We will send you a one time SMS message,</string>
    <string name="carrier_rates_may_apply">carrier rates may apply (Internet connection should be on)</string>
    <string name="submit">Submit</string>
    <string name="_6_digits_674728">6 Digits (674728)</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="search">Search</string>
    <string name="view_detail">View Detail</string>
    <string name="contact_dealer">Contact Service Provider</string>
    <string name="submitting">Submitting...</string>
    <string name="add_find">Add Find</string>
    <string name="registering">Registering...</string>
    <string name="no_proposals">No proposals</string>
    <string name="no_reviews">No Reviews</string>
    <string name="no_finds">No Finds</string>
    <string name="no_ads">No Ads</string>
    <string name="post_service">Post Service/Sale</string>
    <string name="add_downloadable_attachment">Add downloadable attachment</string>
    <string name="attachment">Attachment</string>
    <string name="view_attachment">View Attachment</string>
    <string name="find_detail">Find Detail</string>
    <string name="report_user">Report User</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="send_report">SEND REPORT</string>
    <string name="edit">Edit</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy</string>
    <string name="share">Share</string>
    <string name="customer_yahoo_com">customer@yahoo.com</string>
    <string name="email">Email</string>
    <string name="award_job">Award Job</string>
    <string name="start_chat">Start Chat</string>
    <string name="cancel_award">Cancel Award</string>
    <string name="job_finished">Job Finished?</string>
    <string name="price_range_two">10000</string>
    <string name="price_range_one">6000</string>
    <string name="notification_error_ssl_cert_invalid">The web page is not secured, proceed?</string>
</resources>
