<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdPosterRegistration"
    android:background="@color/colorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/upload_logo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textFontWeight="700" />

            <RelativeLayout
                android:id="@+id/profile_image_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bg_grey"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="0dp" />

                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/select"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/office_location"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_top_1"
                android:hint="@string/_13_aremu_street_ikeja_lagos"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="text"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/market_area"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/market_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/oshodi_market"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="text"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/years_of_business_experience"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/business_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/_15_years"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="number"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/full_name"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/oluwasegun_aremu"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="text"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/business_name"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/akent_furnitures"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="text"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/customer_yahoo_com"
                tools:ignore="Autofill"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/description_of_what_you_do_30_words"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/business_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/we_are_into"
                android:gravity="top"
                tools:ignore="Autofill"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:maxLines="3"
                android:textSize="14sp"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/how_do_you_provide_your_services"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/service_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:gravity="top"
                android:hint="@string/we_are_into_vehicle_rewiring_balancing_and_alignment"
                tools:ignore="Autofill"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:lines="3"
                android:maxLines="3"
                android:textSize="14sp"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/other_phone_address"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/_2348187448888"
                tools:ignore="Autofill"
                android:inputType="phone"
                android:textSize="14sp"
                android:padding="10dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/account_number"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/account_number"
                tools:ignore="Autofill"
                android:inputType="number"
                android:textSize="14sp"
                android:padding="10dp" />


            <TextView
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_middle"
                android:hint="@string/password"
                tools:ignore="Autofill"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:padding="10dp" />


            <TextView
                android:id="@+id/cpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textFontWeight="700" />

            <EditText
                android:id="@+id/comfirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_bottom_1"
                android:hint="@string/confirm_password"
                tools:ignore="Autofill"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:padding="10dp" />

            <Button
                android:id="@+id/save_ad_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/reg_login_button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:padding="10dp"
                android:textSize="14sp"
                tools:targetApi="m" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_appbar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="5dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="5dp"
        app:hideOnScroll="true">

        <include
            layout="@layout/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>