<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".PhoneNumberVerification">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/input_group"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verification_code"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/we_will_send_you_a_one_time_sms_message"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sub_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrier_rates_may_apply"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey"
                android:hint="@string/_2348187448888"
                android:textSize="14sp"
                android:inputType="number"
                android:padding="10dp" />

            <Button
                android:id="@+id/submit_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/edit_set_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:background="@color/light_grey"
                android:textSize="14sp"
                android:hint="@string/_6_digits_674728"
                android:inputType="number"
                android:padding="10dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/set_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/submit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible"
                tools:targetApi="lollipop" />

        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_appbar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:fabAlignmentMode="center"
        app:fabCradleMargin="5dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="5dp"
        app:hideOnScroll="true">

        <include
            layout="@layout/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>